syntax = "proto3";

package judge;

option go_package = "./judge";

message JudgeRequest {
  int64 user_id = 1;
  int64 problem_id = 2;
  string code = 3;
  int64 language = 4;
}
message JudgeResponse {
  int64 code = 1;
  string message = 2;
}

message JudgeCase{
  string input = 1;
  string output = 2;
}
message AddJudgeCasesRequest {
  int64 problem_id = 1;
  repeated JudgeCase cases = 2;
}
message AddJudgeCasesResponse {
  int64 code = 1;
  string message = 2;
  repeated int64 case_ids = 3;
}

message UpdateJudgeCaseRequest {
  int64 case_id = 1;
  string input = 2;
  string output = 3;
}
message UpdateJudgeCaseResponse {
  int64 code = 1;
  string message = 2;
}

message GetJudgeCaseIdsByProblemIdRequest {
  int64 problem_id = 1;
}
message GetJudgeCaseIdsByProblemIdResponse {
  int64 code = 1;
  string message = 2;
  repeated int64 case_ids = 3;
}

message DeleteJudgeCaseByCaseIdRequest {
  int64 case_id = 1;
}
message DeleteJudgeCaseByCaseIdResponse {
  int64 code = 1;
  string message = 2;
}

service JudgeService {
  rpc Judge(JudgeRequest) returns (JudgeResponse);
  rpc AddJudgeCases(AddJudgeCasesRequest) returns (AddJudgeCasesResponse);
  rpc UpdateJudgeCase(UpdateJudgeCaseRequest) returns (UpdateJudgeCaseResponse);
  rpc GetJudgeCaseIdsByProblemId(GetJudgeCaseIdsByProblemIdRequest) returns (GetJudgeCaseIdsByProblemIdResponse);
  rpc DeleteJudgeCaseByCaseId(DeleteJudgeCaseByCaseIdRequest) returns (DeleteJudgeCaseByCaseIdResponse);
}